--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "@prisma/client": "^4.8.0",
     "clsx": "^1.2.1",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sharp": "^0.31.3"
+    "react-hook-form": "^7.41.1",
+    "react-icons": "^4.7.1",
+    "sharp": "^0.31.3",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
