--- a/package.json
+++ b/package.json
@@ -1,15 +1,32 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently -n \"codegen,next\" -c \"magenta,cyan\" \"npm run generate-schema && npm run codegen -- --watch\" \"next dev\"",
     "build": "next build",
-    "start": "next start"
+    "prebuild": "npm run generate-schema && npm run codegen",
+    "start": "next start",
+    "generate-schema": "tsx src/lib/buildGraphqlSchema.ts",
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.3",
+    "@apollo/server": "^4.3.0",
+    "@as-integrations/next": "^1.2.0",
     "@hookform/resolvers": "^2.9.10",
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@pothos/core": "^3.24.0",
+    "@pothos/plugin-errors": "^3.9.0",
+    "@pothos/plugin-prisma": "^3.39.0",
+    "@pothos/plugin-scope-auth": "^3.16.0",
+    "@pothos/plugin-validation": "^3.8.7",
     "@prisma/client": "^4.8.0",
+    "bcrypt": "^5.1.0",
     "clsx": "^1.2.1",
+    "deepmerge": "^4.2.2",
+    "graphql-scalars": "^1.20.1",
+    "lodash": "^4.17.21",
     "next": "latest",
+    "next-auth": "^4.18.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.1",
@@ -18,10 +35,19 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.16.1",
+    "@graphql-codegen/near-operation-file-preset": "^2.4.4",
+    "@graphql-codegen/typescript": "^2.8.5",
+    "@graphql-codegen/typescript-operations": "^2.5.10",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
+    "@graphql-codegen/typescript-resolvers": "^2.7.10",
+    "@types/bcrypt": "^5.0.0",
+    "@types/lodash": "^4.14.191",
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
+    "concurrently": "^7.6.0",
     "eslint": "^8.30.0",
     "eslint-config-next": "^13.1.0",
     "eslint-config-prettier": "^8.5.0",
@@ -31,6 +57,7 @@
     "prettier-plugin-tailwindcss": "^0.2.1",
     "prisma": "^4.8.0",
     "tailwindcss": "^3.2.4",
+    "tsx": "^3.12.1",
     "typescript": "4.9.4"
   }
 }
