--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "concurrently -n \"codegen,next\" -c \"magenta,cyan\" \"npm run generate-schema && npm run codegen -- --watch\" \"next dev\"",
+    "prebuild": "npx prisma generate",
     "build": "next build",
     "start": "next start",
     "generate-schema": "tsx src/lib/buildGraphqlSchema.ts",
@@ -15,7 +16,7 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@pothos/core": "^3.24.0",
     "@pothos/plugin-errors": "^3.9.0",
-    "@pothos/plugin-prisma": "^3.35.8",
+    "@pothos/plugin-prisma": "^3.39.0",
     "@pothos/plugin-scope-auth": "^3.16.0",
     "@pothos/plugin-validation": "^3.8.7",
     "@prisma/client": "^4.8.0",
