--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
-DATABASE_URL=mysql://<USERNAME>:<PLAIN_TEXT_PASSWORD>@<ACCESS_HOST_URL>/<DATABASE_NAME>?sslaccept=strict
-SHADOW_DATABASE_URL=mysql://<USERNAME>:<PLAIN_TEXT_PASSWORD>@<ACCESS_HOST_URL>/<DATABASE_NAME>?sslaccept=strict
+DATABASE_URL=mysql://root:toor@127.0.0.1:3306/kanban-dev
 
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=
