--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "latest",
     "next-auth": "^4.18.7",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.1",
     "react-icons": "^4.7.1",
@@ -45,6 +46,7 @@
     "@types/lodash": "^4.14.191",
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
+    "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
     "concurrently": "^7.6.0",
