--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@apollo/client": "^3.7.3",
     "@apollo/server": "^4.3.0",
     "@as-integrations/next": "^1.2.0",
+    "@headlessui/react": "^1.7.7",
     "@hookform/resolvers": "^2.9.10",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@pothos/core": "^3.24.0",
@@ -31,7 +32,6 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.1",
     "react-icons": "^4.7.1",
-    "react-select": "^5.7.0",
     "sharp": "^0.31.3",
     "zod": "^3.20.2"
   },
@@ -51,7 +51,7 @@
     "autoprefixer": "^10.4.12",
     "concurrently": "^7.6.0",
     "eslint": "^8.30.0",
-    "eslint-config-next": "^13.1.0",
+    "eslint-config-next": "^0.2.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "postcss": "^8.4.18",
