--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@pothos/plugin-scope-auth": "^3.16.0",
     "@pothos/plugin-validation": "^3.8.7",
     "@prisma/client": "^4.8.0",
+    "@vercel/analytics": "^0.1.6",
     "bcrypt": "^5.1.0",
     "clsx": "^1.2.1",
     "deepmerge": "^4.2.2",
