--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vercel/analytics": "^0.1.6",
     "bcrypt": "^5.1.0",
     "clsx": "^1.2.1",
+    "date-fns": "^2.29.3",
     "deepmerge": "^4.2.2",
     "graphql-scalars": "^1.20.1",
     "lodash": "^4.17.21",
