--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "next start",
     "codegen": "graphql-codegen --config codegen.ts"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "dependencies": {
     "@apollo/client": "^3.7.3",
     "@apollo/server": "^4.3.0",
