Move development to Docker

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL=mysql://root:toor@127.0.0.1:3306/kanban-dev
+DATABASE_URL=mysql://root:toor@mysql/kanban
 
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=
