--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "private": true,
   "scripts": {
-    "dev": "concurrently -n \"next,codegen\" -c \"cyan,magenta\" \"next dev\" \"npm run codegen -- --watch\"",
+    "dev": "next dev",
     "prebuild": "npx prisma generate",
     "build": "next build",
     "start": "next start",
-    "codegen": "graphql-codegen --config codegen.ts"
+    "codegen": "graphql-codegen --config codegen.ts",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -54,7 +56,6 @@
     "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
-    "concurrently": "^7.6.0",
     "eslint": "^8.30.0",
     "eslint-config-next": "^13.1.1",
     "eslint-config-prettier": "^8.5.0",
