--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
-DATABASE_URL=mysql://root:toor@mysql/kanban
+DATABASE_URL='mysql://root:toor@mysql/kanban'
 
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=
+NEXTAUTH_URL='http://localhost:3000'
+NEXTAUTH_SECRET=''
 
-GITHUB_ID=
-GITHUB_SECRET=
+GITHUB_ID=''
+GITHUB_SECRET=''
 
-DISCORD_CLIENT_ID=
-DISCORD_CLIENT_SECRET=
+DISCORD_CLIENT_ID=''
+DISCORD_CLIENT_SECRET=''
 
-NEXT_PUBLIC_URL=http://localhost:3000
+NEXT_PUBLIC_URL='http://localhost:3000'
