--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "prebuild": "npx prisma generate",
     "build": "next build",
     "start": "next start",
-    "codegen": "graphql-codegen --config codegen.ts",
+    "codegen": "graphql-codegen --config codegen.config.js",
     "lint": "next lint",
     "lint:fix": "next lint --fix"
   },
@@ -50,11 +50,13 @@
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@graphql-codegen/typescript-resolvers": "^2.7.10",
     "@types/bcrypt": "^5.0.0",
+    "@types/eslint": "^8.37.0",
     "@types/lodash": "^4.14.191",
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-dom": "18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
     "autoprefixer": "^10.4.12",
     "eslint": "^8.30.0",
     "eslint-config-next": "^13.1.1",
