--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,8 +7,8 @@ services:
     container_name: kanban-mysql
     image: mysql:8.0.32-debian
     environment:
-      MYSQL_DATABASE: kanban
-      MYSQL_ROOT_PASSWORD: toor
+      MYSQL_DATABASE: "kanban"
+      MYSQL_ROOT_PASSWORD: "toor"
     ports:
       - "3306:3306"
     volumes:
