Add Nginx reverse proxy

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-DATABASE_URL='mysql://root:toor@mysql/kanban'
+DATABASE_URL='mysql://root:toor@10.0.0.3/kanban'
 
-NEXTAUTH_URL='http://localhost:3000'
+NEXTAUTH_URL='http://kanban.localhost'
 NEXTAUTH_SECRET=''
 
 GITHUB_ID=''
@@ -9,4 +9,4 @@ GITHUB_SECRET=''
 DISCORD_CLIENT_ID=''
 DISCORD_CLIENT_SECRET=''
 
-NEXT_PUBLIC_URL='http://localhost:3000'
+NEXT_PUBLIC_URL='http://kanban.localhost'
