--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,9 @@ services:
     volumes:
       - "mysql:/var/lib/mysql"
     networks:
-      - app
+      app:
+        ipv4_address: 10.0.0.3
+    tty: true
 
   next:
     container_name: kanban-next
@@ -35,7 +37,9 @@ services:
     depends_on:
       - mysql
     networks:
-      - app
+      app:
+        ipv4_address: 10.0.0.4
+    tty: true
 
   studio:
     container_name: kanban-studio
@@ -50,7 +54,9 @@ services:
     depends_on:
       - next
     networks:
-      - app
+      app:
+        ipv4_address: 10.0.0.5
+    tty: true
 
   codegen:
     container_name: kanban-codegen
@@ -63,6 +69,21 @@ services:
     depends_on:
       - next
 
+  nginx:
+    container_name: kanban-nginx
+    image: nginx:1.23.4-alpine
+    entrypoint: ["nginx", "-g", "daemon off;", "-q"]
+    volumes:
+      - "./nginx/nginx.conf:/etc/nginx/nginx.conf"
+    ports:
+      - "80:80"
+    depends_on:
+      - next
+    networks:
+      app:
+        ipv4_address: 10.0.0.2
+    tty: true
+
 volumes:
   mysql:
     driver: local
@@ -71,3 +92,8 @@ networks:
   app:
     name: kanban_app
     driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 10.0.0.0/29
+          gateway: 10.0.0.1
