Use traefik for dev & fix boards link

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,23 @@
-DATABASE_URL='mysql://root:toor@10.0.0.3/kanban'
+ENV="development" # development
 
-NEXTAUTH_URL='http://kanban.localhost'
-NEXTAUTH_SECRET=''
+CNAME="localhost"
 
-GITHUB_ID=''
-GITHUB_SECRET=''
+MONGODB_REPLICA_SET_MODE="primary"
+MONGODB_ADVERTISED_HOSTNAME="db"
+MONGODB_ADVERTISED_PORT_NUMBER="27017"
+MONGODB_REPLICA_SET_KEY="" # openssl rand -base64 32
+MONGODB_ROOT_USER="kanban"
+MONGODB_ROOT_PASSWORD="kanban"
 
-DISCORD_CLIENT_ID=''
-DISCORD_CLIENT_SECRET=''
+DATABASE_URL="mongodb://kanban:kanban@db:27017/kanban?authSource=admin&directConnection=true"
 
-NEXT_PUBLIC_URL='http://kanban.localhost'
+NEXTAUTH_URL="http://www.kanban.localhost"
+NEXTAUTH_SECRET="" # openssl rand -base64 32
+
+GITHUB_ID=""
+GITHUB_SECRET=""
+
+DISCORD_CLIENT_ID=""
+DISCORD_CLIENT_SECRET=""
+
+NEXT_PUBLIC_BASE_URL="http://www.kanban.localhost"
