--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "prebuild": "npx prisma generate",
@@ -32,7 +31,7 @@
     "deepmerge": "^4.2.2",
     "graphql-scalars": "^1.20.1",
     "lodash": "^4.17.21",
-    "next": "latest",
+    "next": "^13.5.6",
     "next-auth": "^4.18.7",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
