--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@pothos/plugin-validation": "^3.8.7",
     "@prisma/client": "^4.8.0",
     "@vercel/analytics": "^0.1.6",
+    "@vercel/speed-insights": "^1.0.12",
     "bcrypt": "^5.1.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
